syntax = "proto3";

import "grid.proto";
option go_package = "github.com/theothertomelliott/tic-tac-toverengineered/pkg/turn/rpcturn";


message TakeTurnRequest {
    string game_id = 1; 
    string mark = 2;
    Position position = 3;
}
message TakeTurnResponse {}

message NextPlayerRequest {
    string game_id = 1;
}
message NextPlayerResponse {
    string mark = 1;
}

service Controller {
    rpc TakeTurn(TakeTurnRequest) returns (TakeTurnResponse) {}
    rpc NextPlayer(NextPlayerRequest) returns (NextPlayerResponse) {}
}